test/integration/bad/decl-reuse-name.stan
parameters {
  real x, y, x;
}
